--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -1,3 +1,5 @@
+@import '@fontsource-variable/open-sans';
+@import '@fontsource-variable/montserrat';
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 
@@ -5,6 +7,7 @@
 @import 'highlight.js/styles/a11y-light.css';
 
 @import 'base';
+@import 'headings';
 @import 'mailchimp';
 @import 'blog';
 
